[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/enemies/egg_bomber_1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/egg_bomber_2.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/egg_bomber_3.png" type="Texture" id=3]
[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/EggBomber.gd" type="Script" id=5]
[ext_resource path="res://scenes/Explosions.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 81.0062

[sub_resource type="CircleShape2D" id=2]
radius = 75.0067

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 19, 9, 265, 281 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EggBomberShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EggBomberShield:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Explosions:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "exploding"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 1, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EggBomberShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EggBomberShield:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Explosions:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "flying"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 1, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EggBomberShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EggBomberShield:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Explosions:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finish_start_animation"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "gone"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Explosions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "spawn_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 1, 1, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.80815, 0.9, 1.00204, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 14, 9, 305, 281 ), Rect2( -20, 9, 305, 281 ), Rect2( 9, 9, 312, 281 ), Rect2( -20, 9, 305, 281 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "spawn_animation"
}, {
"args": [  ],
"method": "stop_animation"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EggBomberShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("EggBomberShield:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Explosions:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "exploding"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "flying"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "gone"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "spawn_animation"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachine" id=6]
states/exploding/node = SubResource( 12 )
states/exploding/position = Vector2( 1083, 65 )
states/flying/node = SubResource( 5 )
states/flying/position = Vector2( 810, 76 )
states/gone/node = SubResource( 15 )
states/gone/position = Vector2( 1401.03, 115 )
states/spawn_animation/node = SubResource( 9 )
states/spawn_animation/position = Vector2( 520, 84 )
transitions = [ "spawn_animation", "flying", SubResource( 10 ), "flying", "exploding", SubResource( 13 ), "exploding", "gone", SubResource( 16 ) ]
start_node = "spawn_animation"
end_node = "gone"
graph_offset = Vector2( 224.154, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[node name="EggBomber" type="KinematicBody2D"]
collision_layer = 4194304
collision_mask = 131072
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 19, 9, 265, 281 )

[node name="EggBomberShape" type="CollisionShape2D" parent="."]
position = Vector2( 25, -63 )
shape = SubResource( 1 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 128

[node name="HurtboxShape" parent="Hurtbox" index="0"]
position = Vector2( 25, -62 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/exploding = SubResource( 11 )
anims/flying = SubResource( 4 )
anims/gone = SubResource( 14 )
anims/spawn_animation = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 7 )

[node name="Effects" type="AudioStreamPlayer2D" parent="."]

[node name="EggBomberShield" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -34, -138, 64, -154, 111, -118, 110, -40, 62, 27, -7, 34, -3, 59, 58, 47, 108, 12, 122, -34, 129, -104, 104, -161, 70, -175, 0, -165, -43, -153 )
disabled = true

[node name="ExplodingTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="Explosions" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -220, -197 )
scale = Vector2( 0.5, 0.5 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="ExplodingTimer" to="." method="_on_ExplodingTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="Hurtbox"]
